[JBWS-2555] Miscellanous fix for issues reported by FindBugs
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/trunk@9395 50344849-fb0f-0410-a53f-a94597aac05c